# MixedPrecisionOFRR

./: .gitignore  README.md
CPP/: CMakeLists.txt
CPP/containers/: CMakeLists.txt  matrix.cu  matrix.hpp  vector.cu  vector.hpp
CPP/core/: CMakeLists.txt
CPP/core/memory/: CMakeLists.txt  location.hpp
CPP/core/utils/: CMakeLists.txt  cuda_handler.cu  cuda_handler.hpp  error_handling.hpp  type_utils.hpp
CPP/examples/: CMakeLists.txt  README.md  ex00.cu  ex01.cu
CPP/io/: matrix_reader.cpp  matrix_reader.hpp
CPP/linalg/: CMakeLists.txt
CPP/linalg/blas/: CMakeLists.txt  mvops.cu  mvops.hpp
CPP/linalg/factorization/: CMakeLists.txt  hessenberg.cu  hessenberg.hpp  qr.cu  qr.hpp
CPP/linalg/solvers/: CMakeLists.txt
CPP/linalg/solvers/eig/: CMakeLists.txt  arnoldi_eig.cu  arnoldi_eig.hpp  rr_eig.cu  rr_eig.hpp  si_eig.cu  si_eig.hpp
CPP/linalg/solvers/svd/: CMakeLists.txt  arnoldi_svd.cu  arnoldi_svd.hpp  rr_svd.cu  rr_svd.hpp  si_svd.cu  si_svd.hpp
CPP/testproblems/: CMakeLists.txt  gaussian_kernel.hpp
CPP/tests/: CMakeLists.txt  gaussian_kernel_test.cpp  hessenberg_test.cpp  matrix_test.cpp  mvops_test.cpp  qr_test.cpp  vector_test.cpp
MATLAB/: 00README.md
MATLAB/+src/+csr/: csr2sparse.m  csrmv.m  sparse2csr.m
MATLAB/+src/+kernel/: gaussian.m  generate_pts.m  plot_pts.m
MATLAB/+src/+krylov/: arnoldi_hess_eig.m  arnoldi_mgs_eig.m
MATLAB/+src/+mvops/: dot.m  gemm.m  gemv.m  norm2.m  scalecols.m
MATLAB/+src/+qr/: cgs.m  hessenberg.m  lu.m  mgs.m
MATLAB/+src/+rr/: eig_rr.m  svd_rr.m
MATLAB/+src/+subspace/: subspace_iter_eig.m  subspace_iter_svd.m
MATLAB/+src/+utils/: eps.m  get_colors.m  parse_precision.m
MATLAB/+tests/+test0/: 00README.md  test.m
MATLAB/+tests/+test1/: 00README.md  test.m
MATLAB/+tests/+test2/: 00README.md  test.m  test_configs.m
MATLAB/+tests/+test3/: 00README.md  test.m  test_configs.m
MATLAB/+tests/+test4/: 00README.md  test.m  test_configs.m
